--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -165,7 +165,7 @@ $\delta(R-R_0)$ we find:
 where $H(R_0 - x)$ is the heaviside function, which ``turns on'' the
 distribution only for $x < R0$ as it is not possible to have a circular radius
 $x$ larger than the spherical radius. So we aim to see our experimental data
-reproduce this distribution. We also investigated how changing the
+reproduce this distribution \cite{Kong2005}. We also investigated how changing the
 value of $R_0$ affects the experimental distribution.
 
 We next considered the case in which each sphere has a radius $R$ uniformly
@@ -335,7 +335,7 @@ are too large, while it is initially easy to place spheres, as more are placed,
 more coordinates must be randomly drawn before one if found for the next sphere
 to be placed into. It is also possible that the algorithm never finds a possible
 coordinate for later spheres. One possible solution to this may be to use a
-better placing algorithm. Choosing a tight packing algorithm %\cite{Chen2001} would
+better placing algorithm. Choosing a tight packing algorithm \cite{Chen2001} would
 maximise the number of spheres of a given radius that can be placed. However,
 this would likely result in a less than random distribution of spheres if the
 spheres are all of identical sizes. This would likely cause some systematic
@@ -343,7 +343,7 @@ error in the data, and so it was not investigated here. If we randomised the
 sizes of the spheres as we do in the next part of the investigation, the problem
 become significantly more complicated. Tight packing algorithms for irregular
 shaped objects are very difficult to create and computationally expensive
-\todo{cite}.
+\cite{Ma2018}. 
 
 We next randomised the radius of each sphere to be in the range $0.65 < R <
 0.75$. The experimental data for this simulation is presented in
@@ -403,7 +403,10 @@ However, it would be more prudent to use a Gaussian distribution to draw the
 values of the noise. This is because it is likely that the many sources of error
 possible in an experimental measurement of particle cross-sections in a material
 will be convoluted together into a Gaussian distribution of errors due to the
-central limit theorem \cite{Islam2018}. 
+central limit theorem \cite{Islam2018}. Thus, it would be necessary for any
+experimentalist attempting to carry out a similar investigation with real
+materials, perhaps to determine porosity \cite{Lekakh}, to carefully consider
+all errors in measurements.
 
 \section{Conclusions}
 In this investigation we showed that it is possible to reproduce expected planar
@@ -436,5 +439,6 @@ solutions to Wicksell's Corpuscle Problem to better identify and classify
 materials by using planar measurements to gain information about 3D particle
 distributions. 
 
-\printbibliography{}
+\printbibliography
+
 \end{document}
