--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -58,7 +58,7 @@ Mathematically, determining the distribution of spherical particles from planar
 sections is a well known problem called Wicksell's Corpuscle Problem
 \cite{DWicksell}, named after S. D. Wicksell, who solved the problem in 1925. With
 this solution, it is possible to determine the original distribution of
-spherical particles. Thus, it is possible to determmine the distribution of
+spherical particles. Thus, it is possible to determine the distribution of
 particle sizes in a solid from its observed cross-section, allowing us to
 identify and classify materials better \cite{Cuzzi2016}.
 
@@ -162,7 +162,7 @@ $\delta(R-R_0)$ we find:
 \frac{xH(R_0-x)}{\sqrt{R_0^2-x^2}}
 \label{eq:phi_constant}
 \end{equation}
-where $H(R_0 - x)$ is the heaviside function, which ``turns on'' the
+where $H(R_0 - x)$ is the Heaviside function, which ``turns on'' the
 distribution only for $x < R0$ as it is not possible to have a circular radius
 $x$ larger than the spherical radius. So we aim to see our experimental data
 reproduce this distribution \cite{Kong2005}. We also investigated how changing the
