Changed location of figures for paper

--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -84,7 +84,7 @@ was repeated until all the necessary spheres have been placed.
 
 \begin{figure}%[H]%[!ht]
 \begin{center}
-\includegraphics[width=0.45\textwidth]{./../Figures/box3d.pdf}
+\includegraphics[width=0.45\textwidth]{images/box3d.pdf}
 \caption{$750$ spheres of radius 0.7 distributed randomly in a cube of length 20,
   such that no sphere is touching or overlapping another sphere. A horizontal
   plane, in blue, passes through the box and ``cuts'' through the
@@ -124,7 +124,7 @@ y_0, z_0) + \rho\frac{(A, B, C)}{\sqrt{A^2 + B^2 + C^2}}
 
 \begin{figure}%[H]%[!ht]
 \begin{center}
-\includegraphics[width=0.45\textwidth]{./../Figures/circles.pdf}
+\includegraphics[width=0.45\textwidth]{images/circles.pdf}
 \caption{Planar cross-section constructed using mock data. Spheres cut by the
   plane appear as circles on the plane, with radius dependent on the relative
   position of the spheres to the plane. This distribution of the radii of the
@@ -203,7 +203,7 @@ planar distribution is presented in Figure~\ref{fig:size1}.
 
 \begin{figure}%[H]%[!ht]
 \begin{center}
-\includegraphics[width=0.45\textwidth]{./../Figures/750_01.pdf}
+\includegraphics[width=0.45\textwidth]{images/750_01.pdf}
 \caption{Distribution of circle radii on plane for $750$ spheres of radius $0.1$
   each. There are relatively few points since the spheres are small, so there is
   relatively small chance that they will be cut by the plane. So only a few
@@ -231,7 +231,7 @@ distribution found is presented in Figure~\ref{fig:size3}.
 
 \begin{figure}%[H]%[!ht]
 \begin{center}
-\includegraphics[width=0.45\textwidth]{./../Figures/750_03.pdf}
+\includegraphics[width=0.45\textwidth]{images/750_03.pdf}
 \caption{Distribution of circle radii on plane for $750$ spheres of radius $0.3$
   each. Compared to Figure~\ref{fig:size1}, there are many more experimental data
   points, since it is more likely that the plane will intersect these larger
@@ -262,7 +262,7 @@ than any other point on the sphere.
 
 \begin{figure}%[H]%[!ht]
 \begin{center}
-\includegraphics[width=0.45\textwidth]{./../Figures/750_07.pdf}
+\includegraphics[width=0.45\textwidth]{images/750_07.pdf}
 \caption{Distribution of circle radii on plane for $750$ spheres of radius $0.7$
   each. We do not observe much difference in how well the experimental data
   resembles the theoretical distribution between this figure and
@@ -274,7 +274,7 @@ than any other point on the sphere.
 
 \begin{figure}[H]%[!ht]
 \begin{center}
-\includegraphics[width=0.45\textwidth]{./../Figures/750_07_random.pdf}
+\includegraphics[width=0.45\textwidth]{images/750_07_random.pdf}
 \caption{Distribution of circle radii on plane for $750$ spheres of radius $R$
   where $0.65 < R < 0.75$. The theoretical distribution is now different,
   although the experimental data still resembles this new distribution, showing
@@ -289,11 +289,11 @@ than any other point on the sphere.
 \begin{figure*}[ht!]
   \centering
   \subfloat[Noise 2 orders of magnitude smaller than radius]
-  {\includegraphics[width=0.45\textwidth]{./../Figures/750_07_Noise_100.pdf}
+  {\includegraphics[width=0.45\textwidth]{images/750_07_Noise_100.pdf}
   \label{fig:2noise}}
   \centering
   \subfloat[Noise 1 order of magnitude smaller than radius]
-  {\includegraphics[width=0.45\textwidth]{./../Figures/750_07_Noise_10.pdf}
+  {\includegraphics[width=0.45\textwidth]{images/750_07_Noise_10.pdf}
   \label{fig:1noise}}
   \caption{Distribution of circle radii on plane for $750$ spheres of radius $0.7$
     each. Each recorded radius has a random noise added to it in order to
